@@ -7,11 +7,13 @@ import tutorin.com.entities.notification.NotificationJobResponse;
 import tutorin.com.entities.notification.UserRes;
 import tutorin.com.exception.NotFoundException;
 import tutorin.com.model.Job;
+import tutorin.com.model.JobApplication;
 import tutorin.com.repository.JobApplicationRepository;
 import tutorin.com.repository.JobRepository;
 import tutorin.com.service.JobService;
 import tutorin.com.service.NotificationService;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -25,9 +27,7 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     public List<NotificationJobResponse> getNotificationJob() {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
-
         List<Job> jobs = jobRepository.findAllByStudentId(userId);
-
         return jobs.stream()
                 .map(this::createNotificationJobResponse)
                 .collect(Collectors.toList());
@@ -36,15 +36,15 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     public NotificationJobResponse getNotificationJobById(String id) throws NotFoundException {
         Job job = jobService.findById(id);
-        List<UserRes> tutors = jobApplicationRepository.findAllByJobId(job.getId()).stream()
-                .map(jobApplication -> UserRes.builder()
-                        .id(jobApplication.getTutor().getId())
-                        .name(jobApplication.getTutor().getName())
-                        .createdAt(String.valueOf(jobApplication.getCreatedAt()))
-                        .updatedAt(String.valueOf(jobApplication.getUpdatedAt()))
-                        .build())
-                .toList();
-        System.out.println(tutors);
+        return createNotificationJobResponse(job);
+    }
+
+    private NotificationJobResponse createNotificationJobResponse(Job job) {
+        List<UserRes> tutors = jobApplicationRepository.findAllByJobId(job.getId())
+                .stream()
+                .sorted(Comparator.comparing(JobApplication::getCreatedAt))
+                .map(this::mapToUserRes)
+                .collect(Collectors.toList());
 
         return NotificationJobResponse.builder()
                 .jobId(job.getId())
@@ -56,24 +56,13 @@ public class NotificationServiceImpl implements NotificationService {
                 .build();
     }
 
-    private NotificationJobResponse createNotificationJobResponse(Job job) {
-        List<UserRes> tutors = jobApplicationRepository.findAllByJobId(job.getId())
-                .stream()
-                .map(jobApplication -> UserRes.builder()
-                        .id(jobApplication.getTutor().getId())
-                        .name(jobApplication.getTutor().getName())
-                        .createdAt(String.valueOf(jobApplication.getCreatedAt()))
-                        .updatedAt(String.valueOf(jobApplication.getUpdatedAt()))
-                        .build())
-                .collect(Collectors.toList());
-
-        return NotificationJobResponse.builder()
-                .jobId(job.getId())
-                .tutorId(tutors.isEmpty() ? null : tutors.getFirst().getId())
-                .title(job.getTitle())
-                .subject(job.getSubject())
-                .deadline(String.valueOf(job.getDeadline()))
-                .tutors(tutors)
+    private UserRes mapToUserRes(JobApplication jobApplication) {
+        return UserRes.builder()
+                .id(jobApplication.getTutor().getId())
+                .name(jobApplication.getTutor().getName())
+                .status(String.valueOf(jobApplication.getStatus()))
+                .createdAt(String.valueOf(jobApplication.getCreatedAt()))
+                .updatedAt(String.valueOf(jobApplication.getUpdatedAt()))
                 .build();
     }
 }
